Updated the MigrationPath to use the FormatRegistry and the MigrationPath helper methods.